compile_errors.txt
    Checking rfd v0.17.2
error[E0308]: mismatched types
   --> /home/mahmoud/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rfd-0.17.2/src/backend/xdg_desktop_portal/portal/libdbus.rs:351:21
    |
13  |         (ffi::Libdbus::get().$f)
    |         ------------------------ arguments to this function are incorrect
...
351 |                     signature.unwrap_or_default(),
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `*const i8`, found `&CStr`
    |
    = note: expected raw pointer `*const i8`
                 found reference `&CStr`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `rfd` (lib) due to 1 previous error
